@@ -290,7 +290,6 @@ LIBRPMIO_0
     rpmiobAppend;
     rpmiobBuf;
     rpmiobEmpty;
-    rpmiobFree;
     rpmiobLen;
     rpmiobNew;
     rpmiobRTrim;
